--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,7 +30,9 @@
 }
 
 
-body {
+html, body {
+	height: 100%;
+	width: 100%;
 	background: #000;
 }
 
@@ -40,6 +42,32 @@ img {
 
 video {
 	width: 100%;
+}
+
+.cover-bg {
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.video-container {
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+}
+
+.video-container video {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.fullscreen {
+	width: 100%;
+	height: 100%;
+	background-position: center center;
 }
 
 #loading {
@@ -53,4 +81,5 @@ video {
 
 #content {
 	display: none;
+	background: #000;
 }
