--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,12 +36,20 @@ html, body {
 	background: #000;
 }
 
+body {
+	line-height: 1.5em;
+}
+
 img {
 	width: 100%;
 }
 
 video {
 	width: 100%;
+}
+
+p {
+	margin: 0;
 }
 
 .cover-bg {
@@ -81,10 +89,41 @@ video {
 
 #content {
 	display: none;
+	position: relative;
 	background: #000;
 }
 
 
+#mainlayer {}
+
+#textlayer {
+	position: absolute;
+	z-index: 1000;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+
+#textlayer-shim {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+
+.text-overlay {
+	background: #000;
+	color: #ddd;
+ 	-moz-opacity: 0.7;
+  	-khtml-opacity: 0.7;
+  	opacity: 0.7;
+  	margin: 50px;
+  	padding: 1em;
+}
+
+/**
+ * DEV MODE
+ */
 #devbar {
 	position: fixed;
 	z-index: 9999;
@@ -113,4 +152,6 @@ video {
 	line-height: 30px;
 	height: 30px;
 	padding: 0 .5em;
+	font-size: 12px;
+	overflow: hidden;
 }
