--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,10 +85,11 @@ p {
 	padding: auto;
 	background: #000;
 	color: #ddd;
+	z-index: 9999;
 }
 
 #content {
-	display: none;
+	/*display: none;*/
 	position: relative;
 	background: #000;
 }
