--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,7 +113,7 @@ p {
 }
 
 .text-overlay {
-	background: #000;
+	background: transparent;
 	color: #ddd;
  	-moz-opacity: 0.7;
   	-khtml-opacity: 0.7;
