--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,6 +60,8 @@ p {
 	background-repeat: no-repeat;
 }
 
+
+
 .video-container {
 	width: 100%;
 	overflow: hidden;
@@ -92,6 +94,8 @@ p {
 	/*display: none;*/
 	position: relative;
 	background: #000;
+	max-width: 960px;
+	margin: 0px auto;
 }
 
 
@@ -120,6 +124,22 @@ p {
   	opacity: 0.7;
   	margin: 50px;
   	padding: 1em;
+}
+
+/**
+ * Specific elements
+ */
+
+
+#startIllustration {
+	-webkit-background-size: 100% auto;
+	-moz-background-size: 100% auto;
+	-o-background-size: 100% auto;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	height:1500px;
+	margin-bottom:200px;
+	background-position: center 0px;
 }
 
 /**
