--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,6 +53,10 @@ p {
 	margin: 0;
 }
 
+a {
+	color: #aaa;
+}
+
 .cover-bg {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -100,6 +104,31 @@ p {
 	color: #555;
 	font-size: 11px;
 	text-transform: uppercase;	
+}
+
+#browser {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	padding: auto;
+	background: #000;
+	color: #ddd;
+	z-index: 10000;
+  	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+
+}
+
+#browserWrapper {
+	width: 300px;
+	margin: 15% auto;
+	text-align: center;
+	position: relative;
+	background: #111;
+	padding: 30px;
+}
+
+#browserWrapper h2 {
+	font-weight: normal;
 }
 
 #loading {
